--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         }
         div.main
         {
+            overflow: auto;
+            height : 80%;
 
         }
     </style>
@@ -17,13 +19,24 @@
         <table>
             <tr>
                 <td width="30%">
-                    <img src="img/logo.png" height="120" width="120">
+                    <center><img src="img/logo.png" height="120" width="120"></center>
                 </td>
                 <td width="70%">
                     <table width="80%">
                         <tr>
                             <td>
-                                Link
+                                <center><a style="font-family:ff-duper">Link 1</a></center>
+                            </td>
+                            <td>
+                                <center>Link 2</center>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <center>Link 1</center>
+                            </td>
+                            <td>
+                                <center>Link 2</center>
                             </td>
                         </tr>
                     </table>
@@ -31,8 +44,16 @@
             </tr>
         </table>
     </div>
-    <div>
-
+    <div class="main">
+        <center>content <br>
+            content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>
+            content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>
+            content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>
+            content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>
+            content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>
+            content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>
+            content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>
+            </center>
     </div>
 </body>
 
