Added some comments

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
 <head>
     <style>
-        div.topBar
+        div.topBar /*Class for the top Tool Bar*/
         {
             background-color : #00ccff;
             height : 20%;
         }
-        div.main
+        div.main /* Class for the main body of the webpage*/
         {
             overflow: auto;
             height : 80%;
@@ -15,6 +15,9 @@
     </style>
 </head>
 <body>
+    <!-- 
+        Top bar 
+    -->
     <div class="topBar">
         <table>
             <tr>
@@ -44,6 +47,9 @@
             </tr>
         </table>
     </div>
+    <!--
+        Main Body
+     -->
     <div class="main">
         <center>content <br>
             content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>
