--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         Top bar 
     -->
     <div class="topBar">
-        <table>
+        <table align="center">
             <tr>
                 <td width="30%">
                     <center><img src="img/logo.png" height="120" width="120"></center>
                 </td>
-                <td width="70%">
+                <td width="70%" align-"center">
                     <table width="80%">
                         <tr>
                             <td>
