Created CSS file and made some template changes to index.html

--- a/index.html
+++ b/index.html
@@ -1,52 +1,39 @@
 <html>
 <head>
-    <style>
-        div.topBar /*Class for the top Tool Bar*/
-        {
-            background-color : #00ccff;
-            height : 20%;
-        }
-        div.main /* Class for the main body of the webpage*/
-        {
-            overflow: auto;
-            height : 80%;
-
-        }
-    </style>
+    <link rel = "stylesheet" type = "text/css" href = "css/main.css" />
 </head>
 <body>
     <!-- 
         Top bar 
     -->
     <div class="topBar">
-        <table align="center">
+        <table class="navlayout" align="center">
             <tr>
                 <td width="30%">
                     <center><img src="img/logo.png" height="120" width="120"></center>
                 </td>
                 <td width="70%" align-"center">
                     <table width="80%">
-                        <tr>
-                            <td>
-                                <center><a style="font-family:ff-duper">Link 1</a></center>
-                            </td>
-                            <td>
-                                <center>Link 2</center>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
+                        <th>
+                            <td class="navhead">
                                 <center>Link 1</center>
                             </td>
-                            <td>
+                            <td class="navhead">
                                 <center>Link 2</center>
                             </td>
-                        </tr>
+                            <td class="navhead">
+                                <center>Link 3</center>
+                            </td>
+                            <td class="navhead">
+                                <center>Link 4</center>
+                            </td>
+                        </th>
                     </table>
                 </td>
             </tr>
         </table>
     </div>
+    <div style="height: 5%"></div> <!--  Div Break -->
     <!--
         Main Body
      -->
@@ -56,13 +43,11 @@
             content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>
             content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>
             content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>
-            content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>
-            content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>
-            content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>
-            content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>
-            </center>
+            content <br>content <br>content <br>content
+        </center>
         <!-- End of Main Scrollable Body -->
     </div>
+    <div style="height: 5%"></div> <!--  Div Break -->
 </body>
 
 </html>
