--- a/index.html
+++ b/index.html
@@ -39,12 +39,19 @@
      -->
     <div class="main">
         <!-- Write Code In Here -->
-        <center>content <br>
-            content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>
-            content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>
-            content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>content <br>
-            content <br>content <br>content <br>content
-        </center>
+        <center><table>
+            <tr>
+                <td><img src="img/stock.png" height="360" width="240"></td>
+                <td><img src="img/stock.png" height="360" width="240"></td>
+                <td><img src="img/stock.png" height="360" width="240"></td>
+            </tr>
+            <tr>
+                <td><img src="img/stock.png" height="360" width="240"></td>
+                <td><img src="img/stock.png" height="360" width="240"></td>
+                <td><img src="img/stock.png" height="360" width="240"></td>
+            </tr>
+        </table></center>
+        <br>content<br><br>content<br><br>content<br><br>content<br><br>content<br><br>content<br><br>content<br><br>content<br><br>content<br>
         <!-- End of Main Scrollable Body -->
     </div>
     <div style="height: 5%"></div> <!--  Div Break -->
