--- a/index.html
+++ b/index.html
@@ -51,7 +51,13 @@
                 <td><img src="img/stock.png" height="360" width="240"></td>
             </tr>
         </table></center>
-        <br>content<br><br>content<br><br>content<br><br>content<br><br>content<br><br>content<br><br>content<br><br>content<br><br>content<br>
+        <center><div class="bookClubForm"><h1>Join Our BOOK CLUB</h1><br><br>
+        <form>
+            Name<br><br><input type="text" name="name"><br>
+            Email<br><br><input type="text" name="email"><br>
+            <input type="submit" value="Submit"><br><br>
+
+        </form></div></center>
         <!-- End of Main Scrollable Body -->
     </div>
     <div style="height: 5%"></div> <!--  Div Break -->
