home page finish

--- a/index.html
+++ b/index.html
@@ -14,22 +14,48 @@
                 </td>
                 <td width="70%" align-"center">
                     <table width="80%">
-                        <th>
+                        <tr>
                             <td class="navhead">
-                                <center>Link 1</center>
+                                <center>Home Page</center>
                             </td>
                             <td class="navhead">
-                                <center>Link 2</center>
+                                <center>Explore</center>
                             </td>
                             <td class="navhead">
-                                <center>Link 3</center>
+                                <center>Book Store</center>
+                            </td>
+                            
+                        </tr>
+                        <tr>
+                            <td class="navhead">
+                                <center>Teaching</center>
                             </td>
                             <td class="navhead">
-                                <center>Link 4</center>
+                                <center>About Us</center>
                             </td>
-                        </th>
+                        </tr>
+
+                        
                     </table>
                 </td>
+                <td>
+                    <table>
+                        <tr>
+                            <td>
+                                <img src="img/fb-icon.png" height="50" width="50">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <img src="img/instagram-icon.png" height="50" width="50">
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+                <td>
+                        <img src="img/shopping-cart.png" height="50" width="50">
+                </td>
+
             </tr>
         </table>
     </div>
@@ -51,6 +77,35 @@
                 <td><img src="img/stock.png" height="360" width="240"></td>
             </tr>
         </table></center>
+        <br><br>
+        <center>
+            <table>
+                <tr>
+                    <td><img src="img/titles-icon.png" height="120" width="120">&nbsp;&nbsp;</td>
+                    <td><img src="img/benefits-icon.png" height="120" width="120">&nbsp;&nbsp;</td>
+                    <td><img src="img/teachers-icon.png" height="120" width="120">&nbsp;&nbsp;</td>
+                </tr>
+                <tr>
+                        <td><center>Titles</center></td>
+                        <td><center>Benefits</center></td>
+                        <td><center>For Teachers</center></td>
+                </tr>
+                <tr>
+                    <td><br></td>
+                </tr>
+                <tr>
+                    <td><img src="img/reading-icon.png" height="120" width="120">&nbsp;&nbsp;</td>
+                    <td><img src="img/stories-icon.png" height="120" width="120">&nbsp;&nbsp;</td>
+                    <td><img src="img/getstarted-icon.png" height="120" width="120">&nbsp;&nbsp;</td>
+                </tr>
+                <tr>
+                    <td><center>Reading<br>Comprehension</center></td>
+                    <td><center>Stories</center></td>
+                    <td><center>Getting Started</center></td>
+                </tr>
+            </table>
+        </center>
+        <br><br>
         <center><div class="bookClubForm"><h1>Join Our BOOK CLUB</h1><br><br>
         <form>
             Name<br><br><input type="text" name="name"><br>
