--- a/reading.html
+++ b/reading.html
@@ -64,30 +64,7 @@
      -->
     <div class="main">
         <!-- Write Code In Here -->
-        <img src="img/bug-banner.png" height="400" width="100%"><br>
-        <center><table>
-                <tr>
-                    <td><img src="img/stock-book.png" height="360" width="240"></td>
-                    <td><img src="img/stock-book.png" height="360" width="240"></td>
-                    <td><img src="img/stock-book.png" height="360" width="240"></td>
-                </tr>
-                <tr>
-                    <td><center><font class="pageFont">Amelia Faces Her Anxiety</font></center><br><center><font class="pageFont" color="red">$19.99 AUD</font></center></td>
-                    <td><center><font class="pageFont">Amelia Faces Her Anxiety</font></center><br><center><font class="pageFont" color="red">$19.99 AUD</font></center></td>
-                    <td><center><font class="pageFont">Amelia Faces Her Anxiety</font></center><br><center><font class="pageFont" color="red">$19.99 AUD</font></center></td>
-                </tr>
-                <tr>
-                    <td><img src="img/stock-book.png" height="360" width="240"></td>
-                    <td><img src="img/stock-book.png" height="360" width="240"></td>
-                    <td><img src="img/stock-book.png" height="360" width="240"></td>
-                </tr>
-                <tr>
-                    <td><center><font class="pageFont">Amelia Faces Her Anxiety</font></center><br><center><font class="pageFont" color="red">$19.99 AUD</font></center></td>
-                    <td><center><font class="pageFont">Amelia Faces Her Anxiety</font></center><br><center><font class="pageFont" color="red">$19.99 AUD</font></center></td>
-                    <td><center><font class="pageFont">Amelia Faces Her Anxiety</font></center><br><center><font class="pageFont" color="red">$19.99 AUD</font></center></td>
-                </tr>
-            </table></center>
-
+        <h1><center><font class="pageFont" color="#2da2a4">Reading and Comprehension</font></center></h1><br>
         <center><div class="bookClubForm"><h1>Join Our BOOK CLUB</h1><br><br>
             <form>
                 Name<br><br><input type="text" name="name"><br><br>
