Reading Page Done

--- a/reading.html
+++ b/reading.html
@@ -65,6 +65,27 @@
     <div class="main">
         <!-- Write Code In Here -->
         <h1><center><font class="pageFont" color="#2da2a4">Reading and Comprehension</font></center></h1><br>
+        <center><div style="width: 50%"><font class="pageFont">
+        <p>As a parent you would be familiar with home readers, reading levels and the different levels of homework given to your child throughout their primary school years. Kindergarten and Year 1 reading expectations are quite different to the expectations of a Year 3 student. 
+            </p>
+        <p>In the early years, and according to their development, children are busy decoding and encoding text. The skills they learn help them to understand how to write and how to read, beginning with words, sentences, symbols used in punctuation and numbers. This increases in complexity focusing on the structures of written text and visual features.
+            </p>
+        <p>As children grow, develop and move through the learning stages Making Meaning is the next reading focus. 
+            </p>
+        <p>The Super Six Comprehension strategies are interrelated and are used to accomplish the goal of comprehension. 
+            </p>
+        <p>Questions in the Question Guide are colour coded to highlight the comprehension strategy being practised. 
+            </p>
+            <img src="img/rding.jpeg" height="70%" width="90%">
+        <p>
+                “When learners comprehend, they interpret, integrate, critique, infer, analyse, connect and evaluate ideas in a text. They negotiate multiple meanings not only in their heads but in the minds of others. When comprehending learners strive to process text beyond word-level to get to the big picture. When comprehension is successful, learners are left with a sense of satisfaction from having understood the meaning of the text.”
+        </p>
+        
+        </font>
+    
+        <p>— NSW Department of Education and Training Literacy Continuum</p>
+        </div></center><br><br>
+
         <center><div class="bookClubForm"><h1>Join Our BOOK CLUB</h1><br><br>
             <form>
                 Name<br><br><input type="text" name="name"><br><br>
