Navbar and various CSS changes

--- a/index.html
+++ b/index.html
@@ -13,25 +13,21 @@
                     <center><img src="img/logo.png" height="100" width="100"></center>
                 </td>
                 <td width="70%" align-"center">
-                    <table width="80%">
+                    <table width="100%">
                         <tr>
                             <td class="navhead">
-                                <center><a href="index.html">Home Page</a></center>
-                            </td>
-                            <td class="navhead">
-                                <center>Explore</center>
-                            </td>
-                            <td class="navhead">
-                                <center><a href="store.html">Book Store</a></center>
-                            </td>
-                            
-                        </tr>
-                        <tr>
-                            <td class="navhead">
-                                <center>Teaching</center>
-                            </td>
-                            <td class="navhead">
-                                <center>About Us</center>
+                                <button class="dropbtn"><a href="index.html">Home</a></button><!--
+                                --><div class="dropdown">
+                                    <button class="dropbtn">Explore</button>
+                                    <div class="dropdown-content">
+                                        <a href="#">Link 1</a>
+                                        <a href="#">Link 2</a>
+                                        <a href="#">Link 3</a>
+                                    </div>
+                                </div><!--
+                                --><button class="dropbtn"><a href="store.html">Store</a></button><!--
+                                --><button class="dropbtn"><a href="teaching.html">Teaching</a></button><!--
+                                --><button class="dropbtn"><a href="about.html">About Us</a></button>
                             </td>
                         </tr>
 
