--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                                     <button class="dropbtn">Explore</button>
                                     <div class="dropdown-content">
                                         <a href="#">Link 1</a>
-                                        <a href="#">Link 2</a>
-                                        <a href="#">Link 3</a>
+                                        <a href="benefits.html">Benefits</a>
+                                        <a href="reading.html">Reading and Comprehension</a>
                                     </div>
                                 </div><!--
                                 --><button class="dropbtn"><a href="store.html">Store</a></button><!--
