--- a/benefits.html
+++ b/benefits.html
@@ -26,8 +26,8 @@
                                         </div>
                                     </div><!--
                                     --><button class="dropbtn"><a href="store.html">Store</a></button><!--
-                                    --><button class="dropbtn"><a href="teaching.html">Teaching</a></button><!--
-                                    --><button class="dropbtn"><a href="about.html">About Us</a></button>
+                                    --><button class="dropbtn"><a href="">Teaching</a></button><!--
+                                    --><button class="dropbtn"><a href="">About Us</a></button>
                                 </td>
                             </tr>
     
@@ -93,13 +93,13 @@
         <br>
         * This is not a test but rather a conversation of learning. Give the reader the opportunity to formulate their own conclusions, it should be considered a teachable moment.
         </p></font><br> <br></div></center></div><br>
-        <center><div class="bookClubForm"><h1>Join Our BOOK CLUB</h1><br><br>
+        <center><div class="bookClubForm"><font class="pageFont"><h1>Join Our BOOK CLUB</h1><br><br>
             <form>
-                Name<br><br><input type="text" name="name"><br><br>
-                Email<br><br><input type="text" name="email"><br><br>
+                Name<br><br><input type="text" name="name"><br>
+                Email<br><br><input type="text" name="email"><br>
                 <input type="submit" value="Submit"><br><br>
     
-            </form></div></center>
+            </form></font></div></center>
         <!-- End of Main Scrollable Body -->
     </div>
     <div style="height: 2%"></div> <!--  Div Break -->
