--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                                     </div>
                                 </div><!--
                                 --><button class="dropbtn"><a href="store.html">Store</a></button><!--
-                                --><button class="dropbtn"><a href="teaching.html">Teaching</a></button><!--
-                                --><button class="dropbtn"><a href="about.html">About Us</a></button>
+                                --><button class="dropbtn"><a href="">Teaching</a></button><!--
+                                --><button class="dropbtn"><a href="">About Us</a></button>
                             </td>
                         </tr>
 
@@ -102,13 +102,13 @@
             </table>
         </center>
         <br><br>
-        <center><div class="bookClubForm"><h1>Join Our BOOK CLUB</h1><br><br>
+        <center><div class="bookClubForm"><font class="pageFont"><h1>Join Our BOOK CLUB</h1><br><br>
         <form>
             Name<br><br><input type="text" name="name"><br>
             Email<br><br><input type="text" name="email"><br>
             <input type="submit" value="Submit"><br><br>
 
-        </form></div></center>
+        </form></font></div></center>
         <!-- End of Main Scrollable Body -->
     </div>
     <div style="height: 2%"></div> <!--  Div Break -->
